cmake_minimum_required(VERSION 3.0)
project(consoleothhelo)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENTIONS OFF)
find_package(OpenSSL REQUIRED)
add_executable(othhelo Boards.cpp dialogbox.cpp Game.cpp Graphic.cpp main.cpp net.cpp)
target_link_libraries(othhelo OpenSSL::SSL OpenSSL::Crypto)